apps/base/gatus/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-https-route
  namespace: gatus
spec:
  parentRefs:
    - name: external-https-gateway
      namespace: default
  hostnames:
    - status.leomercier.dev
  rules:
    - backendRefs:
        - name: gatus-svc
          port: 8080
